--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at 00:00 UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -12,11 +12,20 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Make a commit
+      - name: Setup Git Identity
         run: |
-          echo "$(date)" >> daily.md
           git config --global user.email "mdayanbag@gmail.com"
           git config --global user.name "mdayan8"
-          git add .
-          git commit -m "docs: update log $(date +'%Y-%m-%d')"
-          git push
+
+      - name: Make daily log entry
+        run: echo "$(date)" >> daily.md
+
+      - name: Commit changes
+        run: |
+          git add daily.md
+          git commit -m "docs: daily log $(date +'%Y-%m-%d')" || echo "No changes to commit"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
